CustomObjects/objects/blng__Usage__c.object
<CustomObject>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>AccountUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Invoice Line against which this usage was billed</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>InvoiceLineUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InvoiceRun</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Invoice against which the usages are billed</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Usages billed in this Invoice</relationshipLabel>
        <relationshipName>InvoiceUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__MatchingId__c</fullName>
        <externalId>true</externalId>
        <label>Matching Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>OrderProductUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>OrderUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__SourceId__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__StatusCode__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__UsageStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UnitPrice__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UsageSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage Summary</label>
        <referenceTo>blng__UsageSummary__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Usage</label>
    <listViews>
        <fullName>blng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Usage #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>